/*
 * $Id$
 */

2010-11-30 13:31 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  demos/dbExplorer/dbExplorer.prg
     * added request to HB_NumToHex function

  *  src/raddox/TField.prg
     ! Fixed converting to index expression an integer value

2010-11-24 10:14 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/raddox/TTable.prg
     * renamed "Database" to "Table"

2010-11-24 09:31 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/xho_classes.h
  *  src/common/xho_classes.cpp
     % added 2nd parameter to xho_itemListGet_XHO function to validate
       for a sz class name required
     % ditto from above for the xho_par_XhoObject function


2010-11-05 21:39 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  GNUmakefile
  *  makefile.bcc
  *  makefile.gcc
  *  makefile.vc
     * rebuilded makefiles

  *  src/wxbase/baseclasses/wx_Window.cpp
     * minor code cleanup

2010-11-04 07:22 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/wxh.h
  *  include/wxHarbour/xho_classes.h
     * moved some function prototypes to xho_classes.h

  *  src/common/xho_classes.cpp
     ! Fixed hash map to compile with QHash maps
     * added conditional compiling to separate QT/WX constructs

2010-11-03 22:16 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  GNUmakefile
  *  include/wxHarbour/wxh.h
  *  include/wxHarbour/wxharbour.ch
  *  makefile.bcc
  *  makefile.gcc
  *  makefile.vc
  *  src/common/wx_harbour.cpp
  *  src/hrbcompat/tbrowse/wx_Browse.cpp
  *  src/raddox/TRDOServer_c.cpp
  *  src/raddox/TTable_c.cpp
  *  src/wxbase/advctrls/wx_Grid.cpp
  *  src/wxbase/advctrls/wx_GridTableBase.cpp
  *  src/wxbase/advctrls/wx_Panel.cpp
  *  src/wxbase/advctrls/wx_StatusBar.cpp
  *  src/wxbase/app/wx_App.cpp
  *  src/wxbase/app/wx_TaskBarIcon.cpp
  *  src/wxbase/baseclasses/wx_ControlWithItems.cpp
  *  src/wxbase/baseclasses/wx_ImageList.cpp
  *  src/wxbase/baseclasses/wx_ListItem.cpp